--- a/Dashboard.html
+++ b/Dashboard.html
@@ -21,3 +21,67 @@
             <button class="signup-btn">Sign Up</button>
         </div>
     </nav>
+    <div class="user-info">
+        <img src="profile.png" class="user-img" alt="">
+        <h1 class="username">Lalit Mittal</h1>
+    </div>
+
+
+    <div class="wallet-card">
+        <div>
+            <h4 class="wallet-title">Wallet Balance</h4>
+            <h2 class="wallet-amount">12,560.00</h2>
+        </div>
+        <button class="send-btn">Send Money</button>
+    </div>
+
+
+    <h2 class="transactions-title">Recent Transactions</h2>
+
+
+    <div class="transaction">
+        <div class="tx-left">
+            <div class="tx-icon user-icon"></div>
+            <div>
+                <h3>Linda Smith</h3>
+                <p>Payment Sent</p>
+            </div>
+        </div>
+        <p class="tx-amount minus">- 50.00</p>
+    </div>
+
+    <div class="transaction">
+        <div class="tx-left">
+            <div class="tx-icon shop-icon"></div>
+            <div>
+                <h3>Online Shopping</h3>
+                <p>Payment Received</p>
+            </div>
+        </div>
+        <p class="tx-amount plus">+ 20.00</p>
+    </div>
+
+    <div class="transaction">
+        <div class="tx-left">
+            <div class="tx-icon user-icon"></div>
+            <div>
+                <h3>Mike Johnson</h3>
+                <p>Payment Sent</p>
+            </div>
+        </div>
+        <p class="tx-amount minus">- 120.00</p>
+    </div>
+
+    <div class="transaction">
+        <div class="tx-left">
+            <div class="tx-icon bill-icon"></div>
+            <div>
+                <h3>Electric Bill</h3>
+                <p>Payment Sent</p>
+            </div>
+        </div>
+        <p class="tx-amount minus">- 80.00</p>
+    </div>
+
+</body>
+</html>
