--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
         <div>
             <ul class="links" >
                 <li class="link-items"><a class="link" href="/home.html">Home</a></li>
-                <li class="link-items"><a class="link" href="/dashboard.html">Dashboard</a></li>
+                <li class="link-items"><a class="link" href="/Dashboard.html">Dashboard</a></li>
                 <li class="link-items"><a class="link" href="/pro.html">Pro</a></li>
             </ul>
         </div>
@@ -57,9 +57,23 @@
         </div>
         <h1 class="heading" style="font-size: 60px;">How FingerPay Works</h1>
         <p class="moto" style="font-size: 40px;">A simple and secure way to pay using your fingerprint</p>
+        <div style="display: flex; justify-content: center;" class="flow-cards">
+            <div class="flow-card">
                 <img src="flow1.png" alt="Secure" class="flow" />
+                <h2>1. Scan Your Finger</h2>
+                <p>Your unique fingerprint is<br> encrypted and stored securely.</p>
+            </div>
+            <div class="flow-card">
                 <img src="flow2.png" alt="Secure" class="flow" />
+                <h2>2. Verify Instantly</h2>
+                <p>Fingerpay verifies your identity<br> in miliseconds.</p>
+            </div>
+            <div class="flow-card">
                 <img src="flow3.png" alt="Secure" class="flow" />
+                <h2>3. Payment Complete</h2>
+                <p>Your payment processed<br>after instant verification</p>
+            </div>
+        </div>
         <h1 class="heading" style="font-size: 60px;">Why FingerPay?</h1>
         <p class="moto" style="font-size: 40px;">Leading payments innovation<br>with secure biometric technology.</p>
         <div class="why">
